[tool.poetry]
name = "testparsing"
version = "0.1.0"
description = ""
authors = ["zikden <rivming@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
amqp = "5.2.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
bs4 = "0.0.2"
celery = "5.4.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
idna = "3.7"
kombu = "5.3.7"
lxml = "5.2.2"
prompt-toolkit = "3.0.43"
python-dateutil = "2.9.0.post0"
redis = "5.0.4"
requests = "2.31.0"
six = "1.16.0"
soupsieve = "2.5"
tzdata = "2024.1"
urllib3 = "2.2.1"
vine = "5.1.0"
wcwidth = "0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
